<resources>
    <string name="register_now">سجل الأن</string>
    <string name="info">الاستفادة من الأسعار\n التعاقدية المخفضة</string>
    <string name="start_now">البدء الآن</string>
    <string name="about_seha">ما هي نقابتي صحة\nمستدامة</string>
    <string name="more_details">معرفة المزيد</string>
    <string name="more_news">المزيد من الأخبار</string>
    <string name="our_news">أخبارنا</string>
    <string name="sehe_program">ما هي برامج نقابتي \nصحة مستدامة</string>
    <string name="add_balance">شحن المحفظة</string>
    <string name="balance">رصيد المحفظة</string>
    <string name="add_code">إضافة كود</string>
    <string name="points">نقط المكافآت</string>
    <string name="invitation">منصة الدعوي</string>
    <string name="conditions">قيد تنفيذ الخصم حين اكتمال العدد</string>
    <string name="copy_code">نسخ الكود</string>
    <string name="number_of_part">عدد المشتركين \nمن خلال الكود \n٦</string>
    <string name="number_of_points">عدد النقاط حتي \nالان \n١٥٠</string>
    <string name="terms_and_cond">الشروط والاحكام</string>
    <string name="terms_details">عند دعوتك اكثر من ٩ اصدقاء واكتمال مراحل اشتراكهم من خلال خدامتنا سوف تحصل علي خصم مباشرة</string>
    <string name="done">تم دفع</string>
    <string name="back_home">رجوع للقائمة</string>
    <string name="total_">الاجمالي :</string>
    <string name="date_">التاريخ :</string>
    <string name="search_in">ابحث في الشبكة الطبية</string>
    <string name="select_spe">اختر التخصص</string>
    <string name="covid">كوفيد -19</string>
    <string name="brain">مخ واعصاب</string>
    <string name="heart">قلب و اوعيه \nدموية</string>
    <string name="discount_offers">الخصومات والعروض</string>
    <string name="discount_det">تعرف على أحدث العروض و الخصومات المقدمة من مقدمى الخدمات العلاجية.</string>
    <string name="know_more">معرفة المزيد</string>
    <string name="near_from_you">بالقرب منك</string>
    <string name="recommended">يوصي لك</string>
    <string name="exchange">استبدال</string>
    <string name="congrat">مبروك</string>
    <string name="about_seha_">ما هي نقابتي صحة مستدامة</string>
    <string name="about_seha_details">نقابتي صحة مستدامة هي شبكة طبية متخصصة متوفرة لدي العديد من الجهات العلاجية ذات التخصصات المختلفة والمنتشرة في جميع المحافظات في جميع انحاء الجمهورية والتي تشمل المستشفيات والمراكز الطبية، معامل التحاليل، مراكز الاشعة، مراكز العلاج الطبيعي والأجهزة التعويضية. نقابتي صحة مستدامة توفر لعملائها نسب خصم تتراوح ما بين ٥٠٪ الى ٧٠٪ لدي كافة الجهات العلاجية. بالإضافة الى توافر خدمات الصيدلية اونلاين بنسب خصم تصل الي ٢٠٪ على الادوية المحلية والمستوردة وخدمات الاستشارات الطبية اونلاين وذلك من خلال التطبيق “نقابتي” و تأمين طبي شامل يصل الى 50 الف ج يغطى تكاليف العمليات و العلاج داخل المستشفيات و تأمين ضد الحوادث يصل الى 125 الف ج .</string>
    <string name="filter">تنقية</string>
    <string name="city_">المنطقة</string>
    <string name="government_">المحافظة</string>
    <string name="invitation_sent">تم ارسال الدعوة بنجاح</string>
    <string name="cont">متابعة</string>
    <string name="use_it_now">استخدامه الآن</string>
    <string name="term_">تطبق الشروط والاحكام</string>
    <string name="internet_message">لا يوجد اتصال بالانترنت برجاء التحقق من الاتصال بالانترنت.</string>
    <string name="internet_title">لا يوجد اتصال</string>
    <string name="registration">تسجيل إشتراك</string>
    <string name="add_image">إرفاق صورة البطاقة الامامية</string>
    <string name="add_image_back">إرفاق صورة البطاقة الخلفية</string>
    <string name="national_id_">الرقم القومى</string>
    <string name="job">الوظيفة</string>
    <string name="address">العنوان</string>
    <string name="birth_date">تاريخ الميلاد</string>
    <string name="phone">رقم الهاتف</string>
    <string name="fullname">الاسم بالكامل</string>
    <string name="client_info">بيانات العميل الشخصية</string>
    <string name="account_info">بيانات الحساب</string>
    <string name="followers_info">الأشتراكات والتابعين</string>
    <string name="add">أضف</string>
    <string name="add_new_member">إضافة فرد جديد</string>
    <string name="email">البريد الالكترونى</string>
    <string name="password_">كلمة المرور</string>
    <string name="confirm_password">تاكيد كلمة المرور</string>
    <string name="cash_back_service">خدمة الكاش باك</string>
    <string name="search">البحث</string>
    <string name="medical_search">البحث في الشبكة الطبية..</string>
    <string name="add_review">اضف تقييم</string>
    <string name="profission">التخصص</string>
    <string name="provider_type">نوع مقدم الخدمة</string>
    <string name="invitation_code">رقم صاحب دعوة الخصم</string>
    <string name="send">إرسال</string>
    <string name="content">اكتب رسالتك هنا</string>
    <string name="change">تغيير</string>
    <string name="degree">الدرجة العلمية</string>
    <string name="syndicates">النقابات</string>
    <string name="rewards">برنامج المكافات</string>
    <string name="medical_directory">الدليل الطبى</string>
    <string name="suggestions">الشكاوي والمقترحات</string>
    <string name="settings">إعدادات الحساب</string>
    <string name="setting">الإعدادات</string>
    <string name="logout">تغيير رقم الهاتف</string>
    <string name="search_result">نتائج البحث</string>
    <string name="confirm">تأكيد</string>
    <string name="soon_more_details">مزيد من التفاصيل</string>
    <string name="enter_corect_phone">من فضلك ادخل رقم الهاتف صحيح.</string>
    <string name="enter_phone">من فضلك ادخل رقم الهاتف</string>
    <string name="please_wait">من فضلك انتظر...</string>
    <string name="home_title">صحة مستدامة</string>
    <string name="comming">سوف يتم توفير هذه الخدمة قريبا.</string>
    <string name="not_found">عفوا هذا الرقم غير مسجل من قبل، برجاء تسجيل الدخول.</string>
    <string name="log_out">هل تريد تسجيل خروج!</string>
    <string name="exit">هل تريد الخروج!</string>
    <string name="offers">الخصومات والعروض</string>
    <string name="category">اختر الفئة</string>
    <string name="done_">لقد تم تسجيل طلبكم بنجاح رقم الشكوي / المقترح </string>
    <string name="no_more">لا يمكن إضافة اكثر من 3 صور.</string>
    <string name="please_enter_name">من فضلك ادخل الاسم</string>
    <string name="content_">من فضلك ادخل محتوي الشكوي.</string>
    <string name="select_category">من فضلك إختر الفئة.</string>
    <string name="add_image_">إضافة صورة أخرى.</string>
    <string name="attach_image">إرفاق صورة</string>
    <string name="close">هل تريد الخروج من التطبيق!</string>
    <string name="wallet">المحفظة</string>
    <string name="welcome">مرحبا بك فى نقابتى</string>
    <string name="price_delivery">سيتم سداد رسوم الشحن عند الاستلام</string>
    <string name="no_packages">انت غير مشترك فى باقات.</string>
    <string name="details">التفاصيل</string>
    <string name="gengeral_info">معلومات عامة</string>
    <string name="select">اختيار</string>
    <string name="subscription">تسجيل الاشتراك</string>
    <string name="delivery_phone">رقم التوصيل</string>
    <string name="attach_personal">إرفاق صورة شخصية</string>
    <string name="news">الأخبار</string>
    <string name="no_news">عفوا لا يوجد اخبار</string>
    <string name="error">حدث خطا</string>
    <string name="source">الحدث : </string>
    <string name="login">تسجيل الدخول</string>
    <string name="password">كلمة المرور</string>
    <string name="something_wrong">عفوا، يوجد خطأ في البيانات</string>
    <string name="server_issue">عفوا، حدث خطاء اثناء الاتصال بالسيرقر.</string>
    <string name="payments">المدفوعات</string>
    <string name="language">اللغة</string>
    <string name="delivery_fees">رسوم التوصيل</string>
    <string name="bank_fees">مصاريف تحصيل الكتروني</string>
    <string name="app_name">Neqabty</string>
    <string name="news_title">أخبار النقابة</string>
    <string name="general_news">الاخبار العامة</string>
    <string name="payments_title">المدفوعات</string>
    <string name="about_title">عن النقابة</string>
    <string name="settings_title">الإعدادات</string>
    <string name="contactus_title">تواصل معنا</string>
    <string name="bvt">الشكاوي والمقترحات</string>
    <string name="complains">الشكاوي</string>
    <string name="aboutapp_title">عن نقابتي</string>
    <string name="about_app_content">نقابتي هو منصة تفاعلية تهدف الي تقديم خدمات النقابة بطريقة مميكنة مدعمة بوسائل مختلفة للدفع الالكتروني لتسيهل الحصول علي الخدمات ومتابعة مدفوعاتهم باقل وقت ومجهود ،نقابتي صحة مستدامة هي شبكة طبية متخصصة متوفرة لدي العديد من الجهات العلاجية ذات التخصصات المختلفة والمنتشرة في جميع المحافظات.</string>
    <string name="help_title">مساعدة</string>
    <string name="notifications_settings">الإشعارات</string>
    <string name="font_size">حجم الخط</string>
    <string name="font_size_small">صغير</string>
    <string name="font_size_medium">متوسط</string>
    <string name="font_size_large">كبير</string>
    <string name="developed_by">تم التنفيذ بواسطة نقابتي</string>
    <string name="app_version">الاصدار %s</string>
    <string name="main">الجهات الرئيسية</string>
    <string name="menu_memberName">اسم العضو:  <![CDATA[<font color="#00BCD4">%s</font>]]></string>
    <string name="menu_mobileNumber">رقم الموبايل:  <![CDATA[<font color="#00BCD4">%s</font>]]></string>
    <string name="logout_title">تسجيل خروج</string>
    <string name="login_title">تسجيل الدخول</string>
    <string name="change_syndicate">نقابات اخري</string>
    <string name="neqabty_mega">نقابتي</string>
    <string name="neqabty">تطبيق نقابتي هو منصة تفاعلية تهدف الي ميكنة الخدمات النقابية للاعضاء مدعومة باحدث تقنيات التكنولوجيا المالية والذكاء الصناعي لتسهيل الحصول علي الخدمات النقابية بأقل وقت ومجهود</string>
    <string name="more">المزيد...</string>
    <string name="payment_method">طريقة الدفع:</string>
    <string name="delivery_method">طريقة التوصيل :</string>
    <string name="payment_card">بطاقات بنكية ( فيزا ماستر كارد ميزة)</string>
    <string name="next">التالى</string>
    <string name="your_message">رسالتك</string>
    <string name="send_suggestion">إرسال</string>
    <string name="old_password">كلمة السر الحالية</string>
    <string name="new_password">كلمة سر جديدة</string>
    <string name="change_password">تغيير</string>
    <string name="about_neqabty">استفاد الان بجميع خدماتك النقابية من خلال الانضمام الي نقابتك</string>
    <string name="more_about_neqabty">هل انت مهتم بالخدمات النقابية؟</string>
    <string name="syndicate_member_">هل أنت عضو نقابي!</string>
    <string name="neqabty_member_">هل أنت عضو غير نقابي!</string>
    <string name="about_seha_mos">تعرف علي المزيد عن خدمات باقات صحة مستدامة</string>
    <string name="neqabty_hands">“ نقابتك بين ايديك “</string>
    <string name="one_platform">منصة واحده لإدارة جميع خدماتك</string>
    <string name="already_neqabty_member">هل انت مهتم بخدمات الرعاية الصحية؟</string>
    <string name="password_conditions">كلمة المرور يجب ان تحتوى على حروف و ارقام و رموز مثل # @ ...</string>
    <string name="skip">تخطي</string>
    <string name="employment_type">نوع الوظيفة</string>
    <string name="employment_employee">موظف</string>
    <string name="employment_private">عمل خاص</string>
    <string name="employment_freelance">عمل حر</string>
    <string name="employment_none">لايعمل</string>
    <string name="menu_more">القائمة</string>
    <string name="home">الرئيسية</string>
    <string name="terms_title">الشروط والأحكام</string>
    <string name="contact_terms">قواعد عامة\n
هو نظام مكافآت يمنحك نقاط عند إستخدامك لأي منتج/خدمة من المنتجات والخدمات التاليه:\n
كونتكت تمويل السيارات\n
كونتكت تمويل النقل\n
كونتكت تسوق\n
كونتكت تمويل التشطيب\n
كونتكت وساطة تأمينية\n
كونتكت تمويل عقاري\n
كونتكت تأجير تمويلي (للمنشات الفردية فقط)\n
أنت موافق على الاشتراك بالبرنامج طبقاً لهذه الشروط، والتي يجب قراءتها بالإضافة إلى قراءة شروط وأحكام التعاقد الخاصة بالشركة\n
يتم تفعيل الإشتراك بصورة تلقائية ومجانية في البرنامج دون الحاجة لتقديم طلب إنضمام\n
يحق للشركة إلغاء إشتراكك في البرنامج، وذلك إذا ما نمى إلى علمها\n
    </string>
    <string name="back">رجوع</string>
    <string name="accept">قبول</string>
</resources>