<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_menu_home_selected"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_syndicates"
        android:icon="@drawable/ic_menu_syndicates"
        android:title="@string/syndicates" />

    <item
        android:id="@+id/navigation_space"
        android:icon="@color/transparent"
        android:enabled="false"
        android:title="" />

    <item
        android:id="@+id/navigation_payments"
        android:icon="@drawable/ic_menu_payments"
        android:title="@string/payments" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_menu_more"
        android:title="@string/menu_more" />

</menu>