<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:foo="http://schemas.android.com/tools"
    android:gravity="center"
    android:background="@color/white"
    android:layout_margin="@dimen/_10sdp"
    android:padding="@dimen/_10sdp"
    android:orientation="vertical">


    <EditText
        android:id="@+id/old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/old_password"
        android:padding="@dimen/_10sdp"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColorHint="@color/dark_grey"
        android:textSize="@dimen/_10ssp"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/new_password"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey"
        android:textStyle="bold"
        android:textSize="@dimen/_10ssp"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_conditions"
        android:textSize="@dimen/_8ssp"
        android:layout_marginStart="@dimen/_5sdp"
        android:textColor="#434343"
        />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/confirm_password"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey"
        android:textStyle="bold"
        android:textSize="@dimen/_10ssp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_10ssp"
        android:textStyle="bold"
        android:background="@drawable/select_btn_bg"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_8sdp"
        />

</LinearLayout>