<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_large">

    <TextView
        android:id="@+id/tv_terms_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms_title"
        android:textColor="@color/primaryText"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_terms"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:layout_margin="@dimen/margin_medium"
        android:textColor="@color/primaryText"
        android:isScrollContainer="true"
        android:textSize="@dimen/text_size_small"
        android:text="@string/contact_terms"
        app:layout_constraintBottom_toTopOf="@id/b_back"
        app:layout_constraintTop_toBottomOf="@id/tv_terms_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/b_back"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textColor="@color/colorPrimary"
        android:textSize="?textSizeMedium"
        app:cornerRadius="@dimen/_5sdp"
        app:layout_constraintBottom_toTopOf="@id/b_accept"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeColor="@color/colorPrimary"
        app:strokeWidth="@dimen/_1sdp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/b_accept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:text="@string/accept"
        android:textColor="@android:color/white"
        android:textSize="?textSizeMedium"
        app:cornerRadius="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
