<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/layout_toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/b_skip"
        app:layout_constraintTop_toBottomOf="@id/layout_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_employment_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:fontFamily="@font/hanimation_regular"
                android:text="@string/employment_type"
                android:layout_margin="@dimen/_5sdp"
                android:textColor="@color/secondaryText"
                android:textSize="?textSizeMedium"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/rgEmploymentType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_5sdp"
                app:layout_constraintTop_toBottomOf="@id/tv_employment_type">

                <RadioButton
                    android:id="@+id/rb_employee"
                    android:background="@drawable/rounded_white_shadow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@drawable/radio_button_inset"
                    android:buttonTint="@color/orange"
                    android:checked="true"
                    android:padding="@dimen/_18sdp"
                    android:fontFamily="@font/hanimation_regular"
                    android:text="@string/employment_employee"
                    android:textSize="?textSizeMedium" />

                <RadioButton
                    android:id="@+id/rb_private"
                    android:background="@drawable/rounded_white_shadow"
                    android:padding="@dimen/_18sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:button="@drawable/radio_button_inset"
                    android:buttonTint="@color/orange"
                    android:fontFamily="@font/hanimation_regular"
                    android:text="@string/employment_private"
                    android:textSize="?textSizeMedium" />

                <RadioButton
                    android:id="@+id/rb_freelance"
                    android:background="@drawable/rounded_white_shadow"
                    android:padding="@dimen/_18sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:button="@drawable/radio_button_inset"
                    android:buttonTint="@color/orange"
                    android:fontFamily="@font/hanimation_regular"
                    android:text="@string/employment_freelance"
                    android:textSize="?textSizeMedium" />

                <RadioButton
                    android:id="@+id/rb_none"
                    android:background="@drawable/rounded_white_shadow"
                    android:padding="@dimen/_18sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:button="@drawable/radio_button_inset"
                    android:buttonTint="@color/orange"
                    android:fontFamily="@font/hanimation_regular"
                    android:text="@string/employment_none"
                    android:textSize="?textSizeMedium" />
            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/b_skip"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textColor="@color/colorPrimary"
        android:textSize="?textSizeMedium"
        android:visibility="gone"
        app:cornerRadius="@dimen/_5sdp"
        app:layout_constraintBottom_toTopOf="@id/b_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeColor="@color/colorPrimary"
        app:strokeWidth="@dimen/_1sdp" />

    <TextView
        android:id="@+id/b_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:background="@drawable/select_btn_bg"
        android:text="@string/next"
        android:textAlignment="center"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
