<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="#F0F5F7"
    tools:context=".commen.landing.LandingPageActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_10sdp"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/syndicate_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="0dp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="@dimen/_6sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/landing_bg"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_chefaa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/_6sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:cardElevation="0dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/shefa"
                        android:scaleType="centerCrop"
                        />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_neqabty"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/one_platform"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/neqabty_hands"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_16ssp"
                    android:textAlignment="center"
                    />

                <LinearLayout
                    android:id="@+id/ll_syndicate_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_10sdp"
                    android:background="@drawable/ic_group_163028"
                    android:layout_marginTop="@dimen/_10sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/syndicate_member_"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/more_about_neqabty"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="@dimen/_14ssp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/about_neqabty"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10ssp"
                        android:layout_marginTop="@dimen/_5sdp"
                        />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/neqabty_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_6sdp"
            app:cardElevation="0dp"
            app:layout_constraintTop_toBottomOf="@+id/syndicate_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/_10sdp"
            app:cardBackgroundColor="@color/transparent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:orientation="vertical"
                android:background="@drawable/ic_group_163028">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/neqabty_member_"
                    android:textSize="@dimen/_14ssp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/_10sdp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/already_neqabty_member"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/_13ssp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_seha_mos"
                    android:textSize="@dimen/_10ssp"
                    android:textColor="@color/black"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>