<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:foo="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_margin="@dimen/_10sdp"
    android:padding="@dimen/_10sdp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/suggestions"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/suggestions"
            app:lottie_speed="1"
            foo:lottie_loop="true"
            />

        <EditText
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/phone"
            android:padding="@dimen/_10sdp"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textColorHint="#748A9D"
            android:textSize="@dimen/_10ssp"
            android:inputType="phone" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/email"
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textColorHint="#748A9D"
            android:textStyle="bold"
            android:textSize="@dimen/_10ssp"
            android:inputType="textEmailAddress" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:inputType="textMultiLine"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/your_message"
            android:textSize="@dimen/_10ssp"
            android:textColor="@color/black"
            android:textColorHint="#748A9D"
            android:textStyle="bold"
            android:textAlignment="center"
            android:padding="@dimen/_5sdp"
            android:id="@+id/comment"/>

        <Button
            android:id="@+id/add_suggestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_suggestion"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            android:background="@drawable/select_btn_bg"
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="@dimen/_8sdp"
            />

    </LinearLayout>

</ScrollView>